# ucfi-monitor

./: .gitignore  Makefile  README.md  TODO.txt
scripts/: GetFuncAddr.py  RangeToTrace.py  checkCallRet.py
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  ControlFlowMonitor.cpp  ControlFlowMonitor.h  ExternalLibrary.cpp  ExternalLibrary.h  Flags.h  KB3Instruction.cpp  KB3Instruction.h  Monitor.cpp  Monitor.h  Node.cpp  Node.h  NodeFactory.cpp  NodeFactory.h  PTA.cpp  PTA.h  PTAAction.cpp  PTAAction.h  PTTrace.h  common.h  pt.cpp  pt.h
